# mlec-libzfs-java

./: .gitignore  README.md
jni-lib/: build.gradle
jni-lib/src/main/cpp/: CMakeLists.txt  tools.cpp
jni-lib/src/main/java/jni/: DnodeAttributes.java  Tools.java
jni-lib/src/test/java/jni/: ToolsTest.java
jni-runner/src/main/java/jni/: Runner.java
